chore(components): :construction: creating reusable core components

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,6 +9,7 @@
   --color-primary-2: #eba59e;
   --color-primary-3: #e27d73;
   --color-primary-4: #da584b;
+  --color-primary-5: rgba(218, 88, 75, 0.1);
 
   --color-secondary-1: #c8e1bc;
   --color-secondary-2: #aad199;
