--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,6 +4,7 @@
   --color-neutral-3: #393d41;
   --color-neutral-4: #2c2f33;
   --color-neutral-5: #222528;
+  --color-neutral-6: rgba(148, 151, 154, 0.1);
 
   --color-primary-1: #f4ccc8;
   --color-primary-2: #eba59e;
@@ -15,9 +16,11 @@
   --color-secondary-2: #aad199;
   --color-secondary-3: #8dc275;
   --color-secondary-4: #70b252;
+  --color-secondary-5: rgba(112, 178, 82, 0.1);
 
   --color-tertiary-1: #f9eed7;
   --color-tertiary-2: #f2daab;
   --color-tertiary-3: #ebc77f;
   --color-tertiary-4: #e5b454;
+  --color-tertiary-5: rgba(229, 180, 84, 0.1);
 }
