chore(interaction components): :construction: adding inteeraction component to TaskCard

--- a/src/index.css
+++ b/src/index.css
@@ -32,6 +32,10 @@ body {
   @apply bg-neutral-5;
 }
 
+.custom-caret {
+  caret-color: theme('colors.white');
+}
+
 :root {
   font-family: sans-serif;
   /* line-height: 1.5;
